--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,90 @@
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-    
-    <div>
-        <a >777888999</a>
-    </div>
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner-top">
+                <div class="header__logo">
+                    <img src="img/Logo.png" alt="">
+                </div>
+                <div class="header__content">
+                    <div class="button">
+                        <button>Become a seller</button>
+                    </div>
+                    <div class="header__icons">
+                        <a href="#"> <img src="img/Notification.png" alt=""></a>
+                        <a href="#"> <img src="img/Messages.png" alt=""></a>
+                        <a href="#"> <img src="img/Cart.png" alt=""></a>
+                    </div>
+                    <div class="header__account">
+                        <a href="#"> <img src="img/User.png" alt=""> </a>
+                        <div class="header__accounnt-info">
+                            <a href="#">
+                                <div class="nick">Taofiq Hakim</div>
+                            </a>
+                            <br>
+                            <a href="#">
+                                <div class="balance">$20.45</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="header__inner">
+            <div class="container">
+                <div class="header__inner-bot">
+                    <div class="header__menu">
+                        <nav>
+                            <ul>
+                                <li><a href="#">HOME </a></li>
+                                <li><a href="#"> all products </a></li>
+                                <li><a href="#"> wordpress </a></li>
+                                <li><a href="#">festures</a></li>
+                                <li><a href="#"> Pages</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="header__input">
+                        <!-- <form action=""> -->
+                        <input placeholder="Search product here..." type="text">
+                        <button class="input__picture"> <img src="img/magnifier.png" alt=""></button>
+                        <!-- </form> -->
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
+    <section class="product">
+        <div class="container">
+            <div class="product__inner">
+                <h2>Create Your Own</h2>
+                <h1>Digital Product Marketplace</h1>
+                <p>MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products</p>
+                <div class="product__buttons">
+                    <button>View All Products</button>
+                    <button>Popular Products</button>
+                </div>
+                <div class="product__input">
+                    <div class="input-btn">
+                        <input type="text">
+                        <button class="categories">All Categories</button>
+                    </div>
+                    <button>Search Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js"></script>
-    
+
 </body>
+
 </html>
