--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,33 @@
             </div>
         </div>
     </section>
+    <section class="info">
+        <div class="container">
+            <div class="info__inner">
+                <div class="info__item">
+                    <img src="img/copybook.jpg" alt="">
+                    <h3>Best UX Research</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+                <div class="info__item">
+                    <img src="img/computer.jpg" alt="">
+                    <h3>Fully Responsive</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+                <div class="info__item">
+                    <img src="img/phones.jpg" alt="">
+                    <h3>Buy & Sell Easily</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
