--- a/app/index.html
+++ b/app/index.html
@@ -92,23 +92,174 @@
                 <div class="info__item">
                     <img src="img/copybook.jpg" alt="">
                     <h3>Best UX Research</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
                 </div>
                 <div class="info__item">
                     <img src="img/computer.jpg" alt="">
                     <h3>Fully Responsive</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
                 </div>
                 <div class="info__item">
                     <img src="img/phones.jpg" alt="">
                     <h3>Buy & Sell Easily</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="slider">
+        <div class="container">
+            <div class="slider__title">
+                <h2>Weekly Featured Products</h2>
+                <div class="slider__button"></div>
+            </div>
+            <div class="slider__inner">
+                <div class="slider__inner-item">
+                    <div class="left__content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="right__content">
+                        <div class="right__content-inner">
+                            <h3>One Page Resume Template</h3>
+                            <div class="author">
+                                <div class="slider__author-picture">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="slider__nick">
+                                    AazzTech
+                                </div>
+                                <div class="slider__product">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="slider__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                    mattis,
+                                    leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra,
+                                    justo ut
+                                    scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.</p>
+                            </div>
+                            <div class="slider__tags">
+                                <a href="#">website</a>
+                                <a href="#">plugin</a>
+                                <a href="#">landing page</a>
+                            </div>
+
+                            <div class="slider__dow-info">
+
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider__inner-item">
+                    <div class="left__content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="right__content">
+                        <div class="right__content-inner">
+                            <h3>One Page Resume Template</h3>
+                            <div class="author">
+                                <div class="slider__author-picture">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="slider__nick">
+                                    AazzTech
+                                </div>
+                                <div class="slider__product">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="slider__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                    mattis,
+                                    leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra,
+                                    justo ut
+                                    scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.</p>
+                            </div>
+                            <div class="slider__tags">
+                                <a href="#">website</a>
+                                <a href="#">plugin</a>
+                                <a href="#">landing page</a>
+                            </div>
+
+                            <div class="slider__dow-info">
+
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider__inner-item">
+                    <div class="left__content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="right__content">
+                        <div class="right__content-inner">
+                            <h3>One Page Resume Template</h3>
+                            <div class="author">
+                                <div class="slider__author-picture">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="slider__nick">
+                                    AazzTech
+                                </div>
+                                <div class="slider__product">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="slider__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                    mattis,
+                                    leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra,
+                                    justo ut
+                                    scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.</p>
+                            </div>
+                            <div class="slider__tags">
+                                <a href="#">website</a>
+                                <a href="#">plugin</a>
+                                <a href="#">landing page</a>
+                            </div>
+
+                            <div class="slider__dow-info">
+
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -118,7 +269,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
