added half of shop

--- a/app/index.html
+++ b/app/index.html
@@ -130,12 +130,13 @@
                             <h3>One Page Resume Template</h3>
                             <div class="author">
                                 <div class="slider__author-picture">
-                                    <img src="" alt="">
+                                    <img src="img/User.jpg" alt="">
                                 </div>
                                 <div class="slider__nick">
                                     AazzTech
                                 </div>
                                 <div class="slider__product">
+                                    <img src="img/wordpress.jpg" alt="">
                                     WordPress
                                 </div>
                             </div>
@@ -156,11 +157,11 @@
 
                                 <button>$10 - $50</button>
                                 <div class="likes">
-                                    <img src="" alt="">
+                                    <img src="img/heart.jpg" alt="">
                                     <a href="">45</a>
                                 </div>
                                 <div class="cart">
-                                    <img src="" alt="">
+                                    <img src="img/cart.jpg" alt="">
                                     <a href="">634</a>
                                 </div>
                             </div>
@@ -177,12 +178,13 @@
                             <h3>One Page Resume Template</h3>
                             <div class="author">
                                 <div class="slider__author-picture">
-                                    <img src="" alt="">
+                                    <img src="img/User.jpg" alt="">
                                 </div>
                                 <div class="slider__nick">
                                     AazzTech
                                 </div>
                                 <div class="slider__product">
+                                    <img src="img/wordpress.jpg" alt="">
                                     WordPress
                                 </div>
                             </div>
@@ -203,11 +205,11 @@
 
                                 <button>$10 - $50</button>
                                 <div class="likes">
-                                    <img src="" alt="">
+                                    <img src="img/heart.jpg" alt="">
                                     <a href="">45</a>
                                 </div>
                                 <div class="cart">
-                                    <img src="" alt="">
+                                    <img src="img/cart.jpg" alt="">
                                     <a href="">634</a>
                                 </div>
                             </div>
@@ -224,12 +226,13 @@
                             <h3>One Page Resume Template</h3>
                             <div class="author">
                                 <div class="slider__author-picture">
-                                    <img src="" alt="">
+                                    <img src="img/User.jpg" alt="">
                                 </div>
                                 <div class="slider__nick">
                                     AazzTech
                                 </div>
                                 <div class="slider__product">
+                                    <img src="img/wordpress.jpg" alt="">
                                     WordPress
                                 </div>
                             </div>
@@ -250,11 +253,75 @@
 
                                 <button>$10 - $50</button>
                                 <div class="likes">
-                                    <img src="" alt="">
+                                    <img src="img/heart.jpg" alt="">
                                     <a href="">45</a>
                                 </div>
                                 <div class="cart">
-                                    <img src="" alt="">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="shop">
+        <div class="container">
+            <div class="shop__title">
+                <h2>Newest Release Products</h2>
+                <div>
+                    filter by:
+                    <a href=""></a>
+                </div>
+            </div>
+            <div class="shop__title">
+                <a href="">Plugins</a>
+                <a href="">WordPress</a>
+                <a href="">Site Template</a>
+                <a href="">PSD Template</a>
+                <a href="">Joomla</a>
+                <a href="">User Interface</a>
+                <a href="">Landing Page</a>
+                <a href="">Software</a>
+            </div>
+            <div class="shop__inner">
+                <div class="shop__inner-item">
+
+                    <div class="item__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="item__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            
+
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
                                     <a href="">634</a>
                                 </div>
                             </div>
