--- a/app/index.html
+++ b/app/index.html
@@ -276,7 +276,7 @@
                     <a href=""></a>
                 </div>
             </div>
-            <div class="shop__title">
+            <div class="shop__tags">
                 <a href="">Plugins</a>
                 <a href="">WordPress</a>
                 <a href="">Site Template</a>
@@ -288,7 +288,6 @@
             </div>
             <div class="shop__inner">
                 <div class="shop__inner-item">
-
                     <div class="item__top-content">
                         <button>More Info</button>
                         <button>Live Demo</button>
@@ -309,11 +308,9 @@
                                 </div>
                             </div>
                             <div class="shop__discr">
-                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                                     the mattis, leo quam aliquet congue.</p>
                             </div>
-                            
-
                             <div class="shop__dow-info">
                                 <button>$10 - $50</button>
                                 <div class="likes">
@@ -328,6 +325,201 @@
                         </div>
                     </div>
                 </div>
+                <div class="shop__inner-item">
+                    <div class="item__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="item__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="shop__inner-item">
+                    <div class="item__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="item__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="shop__inner-item">
+                    <div class="item__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="item__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="shop__inner-item">
+                    <div class="item__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="item__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="shop__inner-item">
+                    <div class="item__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="item__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="shop__btn-new-products">
+                <a  href="#">All New Products</a>
             </div>
         </div>
     </section>
