added sectio - two-slider

--- a/app/index.html
+++ b/app/index.html
@@ -519,11 +519,252 @@
 
             </div>
             <div class="shop__btn-new-products">
-                <a  href="#">All New Products</a>
+                <a href="#">All New Products</a>
             </div>
         </div>
     </section>
-
+    <section class="slider-two">
+        <div class="container">
+            <div class="slider-two__title">
+                <h2>Your Followers Feed</h2>
+                <div>
+                    filter by:
+                    <a href=""></a>
+                </div>
+            </div>
+            <div class="slider-two-inner">
+                
+                 <div class="slide-two__inner-item">
+                    <div class="slide-two__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="slide-two__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+                <div class="slide-two__inner-item">
+                    <div class="slide-two__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="slide-two__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+                <div class="slide-two__inner-item">
+                    <div class="slide-two__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="slide-two__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+                <div class="slide-two__inner-item">
+                    <div class="slide-two__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="slide-two__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+                <div class="slide-two__inner-item">
+                    <div class="slide-two__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="slide-two__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+                <div class="slide-two__inner-item">
+                    <div class="slide-two__top-content">
+                        <button>More Info</button>
+                        <button>Live Demo</button>
+                    </div>
+                    <div class="slide-two__down-content">
+                        <div class="inner-container">
+                            <h3>E-commerce Shopping Cart</h3>
+                            <div class="author">
+                                <div class="shop__author-picture">
+                                    <img src="img/User.jpg" alt="">
+                                </div>
+                                <div class="shop__nick">
+                                    AazzTech
+                                </div>
+                                <div class="shop__product">
+                                    <img src="img/wordpress.jpg" alt="">
+                                    WordPress
+                                </div>
+                            </div>
+                            <div class="shop__discr">
+                                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.</p>
+                            </div>
+                            <div class="shop__dow-info">
+                                <button>$10 - $50</button>
+                                <div class="likes">
+                                    <img src="img/heart.jpg" alt="">
+                                    <a href="">45</a>
+                                </div>
+                                <div class="cart">
+                                    <img src="img/cart.jpg" alt="">
+                                    <a href="">634</a>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
