added a lot of things

--- a/app/index.html
+++ b/app/index.html
@@ -533,8 +533,8 @@
                 </div>
             </div>
             <div class="slider-two-inner">
-                
-                 <div class="slide-two__inner-item">
+
+                <div class="slide-two__inner-item">
                     <div class="slide-two__top-content">
                         <button>More Info</button>
                         <button>Live Demo</button>
@@ -569,7 +569,7 @@
                                     <a href="">634</a>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="slide-two__inner-item">
@@ -607,7 +607,7 @@
                                     <a href="">634</a>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="slide-two__inner-item">
@@ -645,7 +645,7 @@
                                     <a href="">634</a>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="slide-two__inner-item">
@@ -683,7 +683,7 @@
                                     <a href="">634</a>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="slide-two__inner-item">
@@ -721,7 +721,7 @@
                                     <a href="">634</a>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="slide-two__inner-item">
@@ -759,11 +759,122 @@
                                     <a href="">634</a>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="statistics">
+        <div class="container">
+            <div class="statistics__inner">
+                <div class="statistics__inner-item">
+                    <div class="statistics-photo"><img src="img/briefcase.png" alt=""></div>
+                    <span>38,436</span>
+                    <p>items for sale</p>
+                </div>
+                <div class="statistics__inner-item">
+                    <div class="statistics-photo"><img src="img/cloud-download.png" alt=""></div>
+                    <span class="cloud-discr">3,736</span>
+                    <p>total sales</p>
+                </div>
+                <div class="statistics__inner-item">
+                    <div class="statistics-photo"><img src="img/smile.png" alt=""></div>
+                    <span class="smile-discr">2,736</span>
+                    <p>happy costumers</p>
+                </div>
+                <div class="statistics__inner-item">
+                    <div class="statistics-photo"><img src="img/users.png" alt=""></div>
+                    <span class="user-discr">25,736</span>
+                    <p>members</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="martplace">
+        <div class="container">
+            <div class="martplace__title">
+                <h2>Why Choose <span> MartPlace</span></h2>
+            </div>
+            <div class="martpace__title-discr">
+                <p>Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid
+                    est laborum dolo rumes fugats untras.</p>
+            </div>
+            <div class="martplace__inner">
+                <div class="martplace__inner-item">
+                    <div class="martplace__number">01</div>
+                    <div class="martplace__photo"><img src="img/license.png" alt=""></div>
+                    <h3>One Time Payment</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+                <div class="martplace__inner-item">
+                    <div class="martplace__number">02</div>
+                    <div class="martplace__photo"><img src="img/magic-wand.png" alt=""></div>
+                    <h3>Quality Products</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+                <div class="martplace__inner-item">
+                    <div class="martplace__number">03</div>
+                    <div class="martplace__photo"><img src="img/lock.png" alt=""></div>
+                    <h3>100% Secure Payment</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+                <div class="martplace__inner-item">
+                    <div class="martplace__number">04</div>
+                    <div class="martplace__photo"><img src="img/chart-bars.png" alt=""></div>
+                    <h3>Well Organized Code</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+                <div class="martplace__inner-item">
+                    <div class="martplace__number">05</div>
+                    <div class="martplace__photo"><img src="img/leaf.png" alt=""></div>
+                    <h3>Life Time Free Update</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+                <div class="martplace__inner-item">
+                    <div class="martplace__number">06</div>
+                    <div class="martplace__photo"><img src="img/phone.png" alt=""></div>
+                    <h3>Fast and Friendly Support</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="become">
+        <!-- <div class="container"> -->
+            <div class="become__inner">
+                <div class="become__left-content">
+                    <div class="become__photo">
+                        <img src="img/Icon2.png" alt="">
+                    </div>
+                    <h3>Sell Your Products</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.</p>
+                    <button>Become an Author</button>
+                </div>
+                <div class="become__right-content">
+                    <div class="become__photo">
+                        <img src="img/Icon.png" alt="">
+                    </div>
+                    <h3>Start Shopping Today</h3>
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.</p>
+                    <button>Start Shopping</button>
+                </div>
+            </div>
+        <!-- </div> -->
     </section>
 
 
