added become section

--- a/app/index.html
+++ b/app/index.html
@@ -862,7 +862,7 @@
                     <h3>Sell Your Products</h3>
                     <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
                         the mattis, leo quam aliquet diamcongue is laoreet elit metus.</p>
-                    <button>Become an Author</button>
+                    <div class="become__btn"><button>Become an Author</button></div>
                 </div>
                 <div class="become__right-content">
                     <div class="become__photo">
@@ -871,7 +871,7 @@
                     <h3>Start Shopping Today</h3>
                     <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
                         the mattis, leo quam aliquet diamcongue is laoreet elit metus.</p>
-                    <button>Start Shopping</button>
+                    <div class="become__btn"><button>Start Shopping</button></div>
                 </div>
             </div>
         <!-- </div> -->
